<resources>
    <string name="app_name"> BYU app</string>
    <string name="saludar">Bienvenido a BYU</string>
    <string name="bienvenida">Bienvenido a BYU</string>
    <string name="enviarMail">Volver</string>
    <string name="respuestaMail">salio exitoso el enviar el mail</string>
    <string name="miTitulo">BYU titulo</string>
    <string name="toas">Este es el toast declararo en el OnCreate</string>
    <string name="snackbar">"Se preciono el boton flotante"</string>
    <string name="nameUser"> Ingrese nombre de usuario</string>
    <string name="email">E-mail</string>
    <string name="password"> contraseña</string>
    <string name="botonIngresar"> Ingresar</string>



    <!-- color region -->
    <string name="red">Red</string>
    <string name="indigo">Indigo</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>>
    <string name="grey">Grey</string>
    <string name="bluegrey">Blue Grey</string>
    <string name="amber">Amber</string>
    <string name="teal">Teal</string>
    <string name="deeppurple">Deep Purple</string>
    <string name="cyan">Cyan</string>
    <string name="brown">Brown</string>


    <string name="redHex">#F44336</string>
    <string name="indigoHex">#3F51B5</string>
    <string name="greenHex">#4CAF50</string>
    <string name="orangeHex" type="color">#FF9800</string>
    <string name="blueHex" type="color">#2196F3</string>
    <string name="yellowHex" type="color">#FFEB3B</string>>
    <string name="greyHex" type="color">#607D8B</string>

    <string name="tealHex" type="color">#009688</string>
    <string name="deeppurpleHex" type="color">#673AB7</string>
    <string name="cyanHex" type="color">#00BCD4</string>
    <string name="brownHex" type="color">#795548</string>



</resources>