<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@color/lightblue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rotationX="0"
                android:text="@string/saludar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/byu" />


        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/nombre_conductor"
            android:hint="@string/nameUser"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="true"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:ems="14"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:ems="14"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/botonIngresar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/boton" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>